<?xml version="1.0"?>
<package format="3">
  <name>scan_detection_fusion</name>
  <version>0.1.0</version>
  <description>LiDAR + camera fusion — named object positions on map</description>
  <maintainer email="aarav@todo.todo">aarav</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
